// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`columns reducer @@INIT 1`] = `
Object {
  "0": Object {
    "id": 0,
    "name": "To-do",
    "taskIds": Array [
      0,
      1,
      2,
    ],
  },
  "1": Object {
    "id": 1,
    "name": "In Progress",
    "taskIds": Array [
      3,
      4,
    ],
  },
  "2": Object {
    "id": 2,
    "isCompletedColumn": true,
    "name": "Complete",
    "taskIds": Array [
      5,
    ],
  },
  "3": Object {
    "id": 3,
    "name": "To-do",
    "taskIds": Array [
      6,
    ],
  },
  "4": Object {
    "id": 4,
    "name": "In Progress",
    "taskIds": Array [],
  },
  "5": Object {
    "id": 5,
    "isCompletedColumn": true,
    "name": "Complete",
    "taskIds": Array [],
  },
  "6": Object {
    "id": 6,
    "name": "To-do",
    "taskIds": Array [],
  },
  "7": Object {
    "id": 7,
    "name": "In Progress",
    "taskIds": Array [],
  },
  "8": Object {
    "id": 8,
    "isCompletedColumn": true,
    "name": "Complete",
    "taskIds": Array [],
  },
}
`;

exports[`columns reducer CHANGE_TASKS_COLUMN 1`] = `
Object {
  "0": Object {
    "id": 0,
    "name": "To-do",
    "taskIds": Array [
      0,
      2,
    ],
  },
  "1": Object {
    "id": 1,
    "name": "In Progress",
    "taskIds": Array [
      3,
      4,
      7,
    ],
  },
  "10": Object {
    "id": 10,
    "name": "To-do",
    "taskIds": Array [],
  },
  "11": Object {
    "id": 11,
    "name": "In Progress",
    "taskIds": Array [],
  },
  "12": Object {
    "id": 12,
    "isCompletedColumn": true,
    "name": "Done",
    "taskIds": Array [],
  },
  "2": Object {
    "id": 2,
    "isCompletedColumn": true,
    "name": "Complete",
    "taskIds": Array [
      5,
      1,
    ],
  },
  "3": Object {
    "id": 3,
    "name": "To-do",
    "taskIds": Array [
      6,
    ],
  },
  "4": Object {
    "id": 4,
    "name": "In Progress",
    "taskIds": Array [],
  },
  "5": Object {
    "id": 5,
    "isCompletedColumn": true,
    "name": "Complete",
    "taskIds": Array [],
  },
  "6": Object {
    "id": 6,
    "name": "To-do",
    "taskIds": Array [],
  },
  "7": Object {
    "id": 7,
    "name": "In Progress",
    "taskIds": Array [],
  },
  "8": Object {
    "id": 8,
    "isCompletedColumn": true,
    "name": "Complete",
    "taskIds": Array [],
  },
}
`;

exports[`columns reducer CREATE_COLUMN 1`] = `
Object {
  "0": Object {
    "id": 0,
    "name": "To-do",
    "taskIds": Array [
      0,
      1,
      2,
    ],
  },
  "1": Object {
    "id": 1,
    "name": "In Progress",
    "taskIds": Array [
      3,
      4,
    ],
  },
  "2": Object {
    "id": 2,
    "isCompletedColumn": true,
    "name": "Complete",
    "taskIds": Array [
      5,
    ],
  },
  "3": Object {
    "id": 3,
    "name": "To-do",
    "taskIds": Array [
      6,
    ],
  },
  "4": Object {
    "id": 4,
    "name": "In Progress",
    "taskIds": Array [],
  },
  "5": Object {
    "id": 5,
    "isCompletedColumn": true,
    "name": "Complete",
    "taskIds": Array [],
  },
  "6": Object {
    "id": 6,
    "name": "To-do",
    "taskIds": Array [],
  },
  "7": Object {
    "id": 7,
    "name": "In Progress",
    "taskIds": Array [],
  },
  "8": Object {
    "id": 8,
    "isCompletedColumn": true,
    "name": "Complete",
    "taskIds": Array [],
  },
  "9": Object {
    "id": 9,
    "isCompletedColumn": false,
    "name": "number 1",
    "taskIds": Array [],
  },
}
`;

exports[`columns reducer CREATE_PROJECT 1`] = `
Object {
  "0": Object {
    "id": 0,
    "name": "To-do",
    "taskIds": Array [
      0,
      1,
      2,
    ],
  },
  "1": Object {
    "id": 1,
    "name": "In Progress",
    "taskIds": Array [
      3,
      4,
    ],
  },
  "10": Object {
    "id": 10,
    "name": "To-do",
    "taskIds": Array [],
  },
  "11": Object {
    "id": 11,
    "name": "In Progress",
    "taskIds": Array [],
  },
  "12": Object {
    "id": 12,
    "isCompletedColumn": true,
    "name": "Done",
    "taskIds": Array [],
  },
  "2": Object {
    "id": 2,
    "isCompletedColumn": true,
    "name": "Complete",
    "taskIds": Array [
      5,
    ],
  },
  "3": Object {
    "id": 3,
    "name": "To-do",
    "taskIds": Array [
      6,
    ],
  },
  "4": Object {
    "id": 4,
    "name": "In Progress",
    "taskIds": Array [],
  },
  "5": Object {
    "id": 5,
    "isCompletedColumn": true,
    "name": "Complete",
    "taskIds": Array [],
  },
  "6": Object {
    "id": 6,
    "name": "To-do",
    "taskIds": Array [],
  },
  "7": Object {
    "id": 7,
    "name": "In Progress",
    "taskIds": Array [],
  },
  "8": Object {
    "id": 8,
    "isCompletedColumn": true,
    "name": "Complete",
    "taskIds": Array [],
  },
  "9": Object {
    "id": 9,
    "isCompletedColumn": false,
    "name": "number 1",
    "taskIds": Array [],
  },
}
`;

exports[`columns reducer CREATE_TASK 1`] = `
Object {
  "0": Object {
    "id": 0,
    "name": "To-do",
    "taskIds": Array [
      0,
      1,
      2,
    ],
  },
  "1": Object {
    "id": 1,
    "name": "In Progress",
    "taskIds": Array [
      3,
      4,
      7,
    ],
  },
  "10": Object {
    "id": 10,
    "name": "To-do",
    "taskIds": Array [],
  },
  "11": Object {
    "id": 11,
    "name": "In Progress",
    "taskIds": Array [],
  },
  "12": Object {
    "id": 12,
    "isCompletedColumn": true,
    "name": "Done",
    "taskIds": Array [],
  },
  "2": Object {
    "id": 2,
    "isCompletedColumn": true,
    "name": "Complete",
    "taskIds": Array [
      5,
    ],
  },
  "3": Object {
    "id": 3,
    "name": "To-do",
    "taskIds": Array [
      6,
    ],
  },
  "4": Object {
    "id": 4,
    "name": "In Progress",
    "taskIds": Array [],
  },
  "5": Object {
    "id": 5,
    "isCompletedColumn": true,
    "name": "Complete",
    "taskIds": Array [],
  },
  "6": Object {
    "id": 6,
    "name": "To-do",
    "taskIds": Array [],
  },
  "7": Object {
    "id": 7,
    "name": "In Progress",
    "taskIds": Array [],
  },
  "8": Object {
    "id": 8,
    "isCompletedColumn": true,
    "name": "Complete",
    "taskIds": Array [],
  },
}
`;

exports[`columns reducer DELETE_COLUMN 1`] = `
Object {
  "0": Object {
    "id": 0,
    "name": "To-do",
    "taskIds": Array [
      0,
      1,
      2,
    ],
  },
  "1": Object {
    "id": 1,
    "name": "In Progress",
    "taskIds": Array [
      3,
      4,
    ],
  },
  "10": Object {
    "id": 10,
    "name": "To-do",
    "taskIds": Array [],
  },
  "11": Object {
    "id": 11,
    "name": "In Progress",
    "taskIds": Array [],
  },
  "12": Object {
    "id": 12,
    "isCompletedColumn": true,
    "name": "Done",
    "taskIds": Array [],
  },
  "2": Object {
    "id": 2,
    "isCompletedColumn": true,
    "name": "Complete",
    "taskIds": Array [
      5,
    ],
  },
  "3": Object {
    "id": 3,
    "name": "To-do",
    "taskIds": Array [
      6,
    ],
  },
  "4": Object {
    "id": 4,
    "name": "In Progress",
    "taskIds": Array [],
  },
  "5": Object {
    "id": 5,
    "isCompletedColumn": true,
    "name": "Complete",
    "taskIds": Array [],
  },
  "6": Object {
    "id": 6,
    "name": "To-do",
    "taskIds": Array [],
  },
  "7": Object {
    "id": 7,
    "name": "In Progress",
    "taskIds": Array [],
  },
  "8": Object {
    "id": 8,
    "isCompletedColumn": true,
    "name": "Complete",
    "taskIds": Array [],
  },
}
`;

exports[`columns reducer MOVE_TASK_VERTICALLY 1`] = `
Object {
  "0": Object {
    "id": 0,
    "name": "To-do",
    "taskIds": Array [
      0,
      1,
    ],
  },
  "1": Object {
    "id": 1,
    "name": "In Progress",
    "taskIds": Array [
      3,
      4,
      7,
    ],
  },
  "10": Object {
    "id": 10,
    "name": "To-do",
    "taskIds": Array [],
  },
  "11": Object {
    "id": 11,
    "name": "In Progress",
    "taskIds": Array [],
  },
  "12": Object {
    "id": 12,
    "isCompletedColumn": true,
    "name": "Done",
    "taskIds": Array [],
  },
  "2": Object {
    "id": 2,
    "isCompletedColumn": true,
    "name": "Complete",
    "taskIds": Array [
      5,
      1,
    ],
  },
  "3": Object {
    "id": 3,
    "name": "To-do",
    "taskIds": Array [
      6,
    ],
  },
  "4": Object {
    "id": 4,
    "name": "In Progress",
    "taskIds": Array [],
  },
  "5": Object {
    "id": 5,
    "isCompletedColumn": true,
    "name": "Complete",
    "taskIds": Array [],
  },
  "6": Object {
    "id": 6,
    "name": "To-do",
    "taskIds": Array [],
  },
  "7": Object {
    "id": 7,
    "name": "In Progress",
    "taskIds": Array [],
  },
  "8": Object {
    "id": 8,
    "isCompletedColumn": true,
    "name": "Complete",
    "taskIds": Array [],
  },
}
`;
